load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "raftutil",
    srcs = ["util.go"],
    importpath = "github.com/cockroachdb/cockroach/pkg/kv/kvserver/raftutil",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/kv/kvpb",
        "//pkg/roachpb",
        "@com_github_Y77CH_raft//:raft",
        "@com_github_Y77CH_raft//tracker",
    ],
)

go_test(
    name = "raftutil_test",
    srcs = ["util_test.go"],
    embed = [":raftutil"],
    deps = [
        "@com_github_stretchr_testify//require",
        "@com_github_Y77CH_raft//:raft",
        "@com_github_Y77CH_raft//tracker",
    ],
)
